--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,44 +4,44 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:4elcjGqdEtRhLaakZPhfyD0TuCaiG8bAExP0+I2frjIHsudCZlnXuPuw3bKCYvAbWYReLcribV+d2XIy8kSiphQ=,iv:+I43lK6oUQhu+IZvpPEUF4Yp7cB+BjgctIC7MFfRT7g=,tag:sNVamuzYP5qcUss8LKG9qQ==,type:comment]
-    #ENC[AES256_GCM,data:q5HVX7OXZhFyvhOzAMPd53un1j1WOEyHfkfLVIRaz8Km3169vbHe0nT2JQ0=,iv:/E64ymViHCfdfNnV0WWn/ZPrafPbjl+wE0AlpuNmzt4=,tag:11OWyPuBSXC9ZmDB80WOtw==,type:comment]
-    VIP: ENC[AES256_GCM,data:xwzFhYBlUyhXzO5LMg==,iv:YE17F//TwF+lH58uVRnUh+q5Wod4VHr+FFZO9BVUoas=,tag:RNE68vYp1u1XYlTdkM/+Wg==,type:str]
-    #ENC[AES256_GCM,data:ClaMjmvaAILQXsQveqI4ZS+eH6SdXm/Ahdwk,iv:weMGcYtqH6NTK1yCzpKgjKaphE8ILHFwHdHWK3yH1f4=,tag:m2QyTE71YTinKsTyI4av3A==,type:comment]
-    #ENC[AES256_GCM,data:OfmpMjy5cHIAgcDrCLvT8iRwY3oZFafVgdYofXE98aM4BiB4F1E9FnZ0V6HyrCQ6eEixHiLCaJA6haEvKlKxiSHrxd97QEr7BMVTlPUHzlCQmYgZANlBQNQ=,iv:7BrFBpQjKPgvA9Ob1VA45kgvimC15RcpP1xnxQmaOYM=,tag:O1hN/gmQvytE0mLeNR6epg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:jyANf5L5Rwl9FCvh2s4=,iv:H9mb0IOgJIf6dAaKaQmqqfNHp+fDxCIkuYXDFzY/kIA=,tag:i60pr4iATxJQnpNT83vi8w==,type:str]
-    #ENC[AES256_GCM,data:CCsDaAuJai2fn4b4RDy2UkbE9igo3gS3Ur3lSDLlFwEcfA==,iv:FqaJp/mMzfahOPYlX6v+aysuFP1p+bLrKa8lnJgdsZY=,tag:MxQ9fqDJdnrTs3xoYmQMJQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:EicWc7ADKhauaqPe1A==,iv:umkQxFOXlOVMZAsAqj+xVfs7Ophc9dhILKJuliIMU4s=,tag:7y686P5WbbRZErcDlmVsiQ==,type:str]
-    #ENC[AES256_GCM,data:rMjhOK31Ld7tT+fY8j4bLFbtp+ZmrF4KFIuNUbf+pkidrMG/+CtjIMui8MWEZ2I=,iv:3LWF3a2fhoRf2YvrhDD1HbHN9RF0ux+55yK/RB2W9eU=,tag:hO85E1pSDOHsa7+CzqjtTA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:EYGSQenrbYAwJoTb4/zzlVVuy+AcpKlmw+1EQsERaQ==,iv:hlLpSMauZBpzW0bfKep7GEVQkAy2ItHuh5UzNk36Be4=,tag:egQAdz2nR8tHdqE6ktpkJA==,type:str]
-    #ENC[AES256_GCM,data:fEopZTsVqrJNeV5cELu2BmgGDdeCefmtUJAfLy7NNanoSkFZ+STXup6DKYvJAvi0uLUgPizaC0t92YALUxttOPOAtCVAT2AxyrkelulgdTFQCA==,iv:AFRH2SoeWB2kgOJvaq8JkZK4nrprJG9zMDK6odKq4vs=,tag:sJiMBokaqS9CkdQLSo+aCg==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:ZEUu06vIEAJzdHs0bUr4,iv:cyfsA8Rvauux7Og0ccsFNy+mDYsstTu6ydLbj/Odyo0=,tag:hjhSTJOd8vjjHagvJaT8VA==,type:str]
-    #ENC[AES256_GCM,data:2Pj7MELuw+H+rrtVouvf7WGX83H3r8SA1NNSW+00qiN0,iv:IZ++YHPW9yIhbhJYyfFnMYvv+nQn/I7psvcOyWsUtnU=,tag:a2eMxY9rT4PrQIwaqYzmnA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:bTeqaC1ldwyfy6yEY1Ko,iv:udpqV1TtXGvPLOuPUk8HKHtXXrZPJmwgpWLOWqf8o+k=,tag:SUyVnk5QHXjyWIzc8r5Hiw==,type:str]
-    #ENC[AES256_GCM,data:0uPH20ccsaDIPMRaKOiJJbpFx/qcWjPUwZM8YshxP4tCi58uQ++8lMzazLqbOO2Kiz4rYDolv0FdCxmhs7rPUzH+kt8P3nO3j8B7FoDysZc=,iv:ZG5BjcH6DYP7b9yLsfpmj8FvVIw5tGUbY+WvYgZENo0=,tag:8ZR7i7Hn/fSLHQ9ztdmFQg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:ABghKFpPm4q3co9nXFT3,iv:K94IKouQ8xWjk2LGoCJikQdIlz9GEMe2AUtKe2qAuck=,tag:Zg5v2sKSwMEIzAgomYtHLQ==,type:str]
-    #ENC[AES256_GCM,data:9ug7RJUb/NRDD501L33zXBE1OuHdLJntS1Bg1vEhKu/7NKEEgL0du524CLHF+hsARSES9wHfSDRt7DM1wfILw9feMAtzOPRC1ZjwqVK6+3MfpTljcMGD,iv:NcllvR5+9aICNTdvpPbI3Qt4o0xCYvcROCGkFZiICA0=,tag:JCE1Mil19x+9TeVoYsDP3w==,type:comment]
-    #ENC[AES256_GCM,data:EdXwMFu0/hqQI1faFe5T0SX/qj+kof4DP4/XgUa1ikfhKep9UrgVdQl/5JJDBaw2O1f9Vg0RXdM0dLkv2x6mQ7vYsc183cgnNkak3SgWWB9iYrKklfROqurk5tHGGrYIilagLjEgqxkecsxym8vAjGNXJiFZJ+X9hSOo1Q==,iv:n71ARQtWz6+XhfXWkEhde63BanFVA33+4sWYtYrNwY0=,tag:R49EPNhsf1WT0F6yv+yY9g==,type:comment]
-    #ENC[AES256_GCM,data:dBrg0tw9NtkhPfeh97A6J59vMN4+j0I/YOfmrcJmD9RgcrNEJQm462opywNpbEU8F2FzoGKnrajlJ2lt/nLaao1VyHXLKd3Le7fQHe6jqG4=,iv:da/lpu8iMCPUYf1ghxnwKLzwdA0aQgB/EFXX9sjhSL8=,tag:U2jrE3feZiVZV0uMfvMRYw==,type:comment]
-    #ENC[AES256_GCM,data:775uSrgmIlT2I42e/TA2lF04awXcgX1MB32OzNLvKMvo6M2PSYdMtiM4An6Gfr0RQnsY4l24,iv:9mve5wrgPp9NTlqLKwWxZxPpzMhCekcwfLe93Dtuh5g=,tag:4BhTQeLHK4Tgw/4ypuBCZQ==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:ZRK1Ji6an3cIqpNZtpQ=,iv:SurLHRqdWNzyh2eaa6SaF8jqsSr62jD8L9nSZIx8r1I=,tag:K1b45Gd5WN9sB4Qono15Rw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:W8C9pCX2WHK4yJhF,iv:+WAcOddV3MNr6LMTqNisK7HJgv4mwOHPfBxu4NE9fGU=,tag:7fe4KX8eZ90AM5gHqka80w==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:gLP83M01xqQjdcDv0cWYq+U=,iv:BT3peuH5+tcziisOEmg6AIU7Oy4/S3MUosFfR/gc4Dg=,tag:XJ7utMrYzyGpsPtwPxqTMg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:onWaj/1YT1w2i/8M93luGiKwLNCIVBtIE6VDBa9yCv8=,iv:TJrgc5+FLpygkDhB156qGTN/XM3tIUaEOoD+T870ei0=,tag:xOOR7kx4vE7flSqS/DJbWQ==,type:str]
-    #ENC[AES256_GCM,data:20a2Pjqj+QJlbENbHijMW98GI11MAnwpplkgKRmTyrdfSk2jtjoI2bmFG702k5NGPzweZofRkyU1P7T6qUwuDqNVBg==,iv:jy5W50uHpVJ6uDof3YwtFV58cqj4qkzvKE2Z89TjVeI=,tag:p2ytaMyDli1uPLV1E06R3w==,type:comment]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:F6JdxU+sMca5cJHWV58KgGgY5dOVLTyCwBB/N0njzS8vev938g==,iv:Vr1OOWODWrKxjqcF7KMm6XK4CLAP5KvPDJj0IIMk08k=,tag:pAqvTRpLGjSdvV05WgL82A==,type:str]
-    #ENC[AES256_GCM,data:xIVjdPrhcx7XIBbjppb4wzXXOPYmnrxkKgOLRXT8TdMBIv704hLLuOsqze2xVNoIROYBNItwRXc=,iv:PVDcEMfImBFOX7iSJCwJ2lssr8T6oi9Fu2jEyqbInxs=,tag:sIsiapuLt5GY+XwkJN5xNQ==,type:comment]
-    #ENC[AES256_GCM,data:9Pt6kJ65ZNavBBeF+XfZJejUez9hBkCB/Q==,iv:PF2DazCn/3yjoG3pj9IK7O3pCXAjy7Vd3/LMr2Gsg8Y=,tag:Zq+UkJu+ZqHOheQDaO59jQ==,type:comment]
-    #ENC[AES256_GCM,data:1gRrTp4v+rJqoiOICBcrLAmj8hNeDxbPb+lAHN080Ku14GqaNuiBCNhyDSKLV79K1fjNAJT3gbTkM/777dtz3bLhqsV8mrwRDEm/loQ=,iv:MUB29nJAKsJbUDre5XpCzJVs5zlGQ48Jav27s9f9oQg=,tag:rp0otPrRUNdrhDvFRqBtTA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:y2cW5hCJrqLLUsv8BkZleJYPgZkuFFNAvCjH7BrR3svqwOzEC+CsFo5kUl1GNStJ,iv:zs8b5E9TmHedINODgbVHdxoV4oCwwtSygVm8dgdPTJU=,tag:RnXHTSXXCeKZGZOSntWfWQ==,type:str]
-    #ENC[AES256_GCM,data:jFkE81O7w60fIJBe6M/uRS73j844NTO/YW3TEK6Z6/Gvaz/32FRyUjxvYO5b/0XfE7Rw2FpvyYVThZkWwnxHaNkdIrP4Ud4=,iv:5dzvQN20r8pLcaGY7IZxdCdgS0UiZTJs5gsfs8duwAo=,tag:+Lna+hbBW/7o97syh8w40A==,type:comment]
-    #ENC[AES256_GCM,data:tMsltII+GahyuUz2L2JuuPGvdK1LDPv2c1sss5mz4Tov+ZkSeIYt8VYPBZyvAF0+ok6GUQLl,iv:nq5GJkLO9FgF9as/BtxIZwqI4gBRmGGMXA+STCkU+Y4=,tag:ugSLNtANPo+gGYSPx3DVkw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:1neazKWi/g==,iv:xahTRVGrbPVq1jOtR9EtKchd8BG5H7QnkdWRLxO3+ac=,tag:BK9eo9OXlUMS9Is3NrCsjA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cD0FvXKBwg2jEsNEh/OwBmrDdtk=,iv:b5VIdtPU97urBfwiNmZp9HAuDWTK1U68fxpmBO3Lpwc=,tag:DXmHrK2SlBiL9KFT5Z/sUg==,type:str]
-    #ENC[AES256_GCM,data:K7ny4TZIL5+htuXStlI=,iv:I1ui7/IcbSAxF/Pwm1vc9ecLRt6GLwdjadXy+qysaPw=,tag:6lfEfcvFpwU5JwNcA8zZdQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:TbrL8VavarqhGiukVw==,iv:T+qPNFp2v70XP/mstsjjoKY4tX0SHxvLn9lHRRP/7dQ=,tag:LbpgdPTGD4R07lXG8NxmgQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:VUobKPSeULkKpL336Q==,iv:kPy07mL3N1Te5yT/CTl1d+w0y+nqjdMjy3rfJTOr3vQ=,tag:p1SHi6+15BWBaMTz3ynxjw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:fYSVog==,iv:5veccXEPUeh7tJPE4kkaO+vsOwb0qKhC9ohH2SN7gQs=,tag:PR+OPvvHkkIkwPmRYrctXw==,type:str]
+    #ENC[AES256_GCM,data:bhIh9a+WEXn0p84a2ZaB8C4mFMu4dJvV0ypTwZOW/DDTiDIWPpYJduNPsUEETYlMypMP018fr8zSnT50sD4rm4I=,iv:kPvLuqEbqUuHl6olX8tMnexl6VE1d3maV3S6mW2cOpU=,tag:VOqCD75vIFcktdNwqAmQmw==,type:comment]
+    #ENC[AES256_GCM,data:VKRv80rX2dpjucAb9308mWbkdnhBqmRmPH5vc85kNVpE0n1P+amyRNVkCns=,iv:DBOisOqAjM/+zLnIyw3CJXw0FkeW+rB5c3ANSnxByGQ=,tag:6Uf1D8nFMWbPVsJXDDwyHw==,type:comment]
+    VIP: ENC[AES256_GCM,data:kGL4ulXMAyHc7v5a8A==,iv:TJetmtSP5Och9oKP1p6V1qf6P5e82COd2J7MzU+ab7A=,tag:zrBe+Uw6xO3VchdTXVJ9Wg==,type:str]
+    #ENC[AES256_GCM,data:DRkLjVtB58NBk3KXmzk9nRefUW/bpJdZucZF,iv:f2ZH4yZtTR+Kc8qSCr98iuCpgXKt+X9hwoSEVPTSaw4=,tag:Maip0mGAIdFIOvGfrN9n4Q==,type:comment]
+    #ENC[AES256_GCM,data:uKzjYgD1+9eP/QiD2Xcj/uU50W4P2axHitQM4pOBB1ei+lvDgxo3GhJut+lSjzm2x7ZRDg0l26sDMnV8RjT9N9rpObgdbuEzUEXv8ZlBwuyKmGXeBY4u68o=,iv:sYdFkzaAlJ3big+/4MEjP8tCw/TbIVYZzsRwHaOth1c=,tag:0Tsk6dEKTmv4K89hTOfeRw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:uPUXmwjt+1wvCPfLuqM=,iv:ufBFTHWMam1qGiv74kBDPyMt0kfMaXQTrFI48TOtG8w=,tag:O2U/P3JlJRKbbmQuOo6DMA==,type:str]
+    #ENC[AES256_GCM,data:DjWZd2T7wA1hhFg98JwUx4w+e/DrPAO9K5jpBqJrmgTdCw==,iv:s/1i2Yc8faGhZZZKqOrBlcBB/akGKNYT1augO4C1MSc=,tag:4x841eWrBcSeltyL/PJoGw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:xo5eSbnUnjj85IWAgg==,iv:Tmc1BcG1mEnRulmS0yozC1sOa26ho6UGh681RFAm0sA=,tag:Zez/3Wkq+7kiPzErh8LFzw==,type:str]
+    #ENC[AES256_GCM,data:sNVv1kgXB/6FvDIm0aZHHc3HyZmAjxAkrvxdsZULy0J6eIxc1DSixs398m7MOeA=,iv:f14FtiL32mmghNYNQHVj7C/o9aB5gwxBoLDPmzwFE2U=,tag:RAUJ4rAczmXcJYBRXM20kg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:SmN/xjMB77Z+9GxeZsm+Dv6J8WfIorXdf6YZUthm9Q==,iv:cVUCfxllhHK4xdgpZbEh4/RqKOUBSiaLFCDhSq+JBvg=,tag:0GP9W+p8YKKBIajvwPmlgw==,type:str]
+    #ENC[AES256_GCM,data:DuBw5kPc6B7KgmuSaflewC/aofw/mlpFrOUjtu3Fdi8w+I/RwslWbcVqbI2+ooQF42vhJzPJHnyKZi1PomjQdYmy7qWJSCpvPC8glA0YXhapgA==,iv:Y5zfCWbo7wzJWWGPdMccKUxnkChv8YTHl0X2dQox380=,tag:olCqsVdCwADWuG5MN43CCg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:fMN8LOCb+CTqqhRDEzyf,iv:tF9m3KnGLtdU8bDAc/AbCfxxz9RpsQmQN06uWvqkSTE=,tag:i/7NCy06pj/9CF0fOFcC5g==,type:str]
+    #ENC[AES256_GCM,data:CLRbrkO7t0v0rgJBI/OPefvDv9U3BDddfTIisTUrqtfK,iv:QLoH0o0wetjdwfILxFfJHuCqEGNzBYuWq94reZzK4sY=,tag:qmxH2G3H065wKwhc49F3Aw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:0q9qezEdxVdNJ8O7gPTv,iv:6uf8R25ulw0y5plzYhDtaWmLkOOtKcYUCYAr3w7xNts=,tag:sKVsZMTi/6AQ8RXwcb3/bA==,type:str]
+    #ENC[AES256_GCM,data:9Bol1bQO0du1jMRlXEhtzaGHMJj5aF0SJEZD2yRn1jvpqsBrS3pgHqmfLwqkUiCPDHqZbeMWXl6JLG+Hg/OLssuoz5lOAMnrjsHA3/nQceo=,iv:skSBbVMy71nIjxVqMTtOnFHVlRMs0MacpuJx4uFK7/k=,tag:ghHtsdEn6MTNIm0IKSnaBQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:ZplnSXcP1yS9Y9tLwVT+,iv:cW5W9VgM3CxbcbKB5J8jLMcVxfzhbqkqtVBU3Wr7XY4=,tag:XdTABQYtS1wKFv6F8KF8YA==,type:str]
+    #ENC[AES256_GCM,data:YwvxHiVOEY4XpINWyfY6SiNYLY3b/P0Lxww/ADOf2TlH4BujdZ3IXxqTvMgdhT4hhfTg/f9cq+j1xvXNc4Gm6x7JkAS3ASNv4yHzdx4P+93Y6CovLBVn,iv:JISlvl+RK+mvUP+r9nXpjXfQsf2wb3ef/sgoGl9tT5U=,tag:LdYcy5mojPmPAaVj/T+KaQ==,type:comment]
+    #ENC[AES256_GCM,data:zha859/ej8fP5r4zVy6u55eBf6tYi71vmi3ggLoAlvDn+g6gq06KGTnxMH8n3QO2nQ/gqfr//eUq3Uwt5b2vTv61wwIfkABTUbG5wocRbligLaksjSK2BAKA+j5g+RnvfUwMZw9N97tm2rMnqd+Hj44YYWhXn4UdKShOkw==,iv:X4mp9BKRP7XvdQugQH/647q6KJWMfeZXdu3ZNDOUcAk=,tag:n5M/5uhRi6kElzDg5Ske0g==,type:comment]
+    #ENC[AES256_GCM,data:vLP2se5jK+0vrXVQKoL0IIPKA+ZSfziD/c0siZdZ9ivmd7YGMv8IWwijQq2rl0PWhz53Pk/sAtm41W81qtgjSghAMin3wvf+i0KlrFBI5dA=,iv:xx74EtM/xGhyKfB7WHoB27OVe/svhUEkzuxhQmA7gvE=,tag:GhwiM3XPIHMzc12BvrKnFg==,type:comment]
+    #ENC[AES256_GCM,data:e+YbtwpmHjiD2xazY3fpnAaUAd0gpbCx2Vp5B6sVhens//h0Xgcoq2heQlI9fAAzNPQeGHqc,iv:e1RJ23EILbBl3KEPe5SrzYMh5jF8R7fX5j7rbu643jM=,tag:KdY2hJsj18BfZZl9LaJTLw==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:rfkjafRo069xrylOeCM=,iv:wh8blDVB9WSCwvF6Gv4Lt3Ji+zo6TiVt3i/MzWskVE0=,tag:GyT1nttksPcUdZ/Q/5D3FQ==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:jr7TxRNlW+h5SLpI,iv:QSp87WMaf/ABBdcjugf41lE9gOdAwmQYUSW9eZp+vKg=,tag:VRyOHm5z/2MOLFe+dLNOUA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:B7Eadg2Y8OgFT1tQ1Upv0OQ=,iv:msaOOYPWgIgfnLpFFJfpcUJ7hbqeQwEk4eJLBHHzfwM=,tag:a6amdj/w7yU/7o/4W2ECfA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:rotnF9iXbrFlM6l+iwlM4YdSu29cvSqSP32QpONeshM=,iv:zFOwgBV4myUOhEdz4hf0Rg5OO5s69C17/pf0vEYC6H0=,tag:EqgPPT9VD9V2vLrlHzrzvg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:y9DCYCzSGTrQ9D1SjWY96HJaKXrgnuWEHnqK1vX7NsLZEk3R2mT+vA==,iv:9unwB+a1tKcvzXqMC7oHYi5QBB8qiLfJYXA020sAcGQ=,tag:gVRuSAOIWPRGX0unq4gswA==,type:str]
+    #ENC[AES256_GCM,data:8RcsTy7cMKTQ9M031eOMuDb0n6mjfDdjhRYuiKT32wow+LOc/CBfJ/+DeAHlU2E4XfHT7MVGlEw2qbDpdYTraA==,iv:xVGNriMJheFGro9JvAHvVoS3KhOiEqSVS6ur5ay1okg=,tag:AU9HsyqRk4RYJhTbvTr2Kg==,type:comment]
+    #ENC[AES256_GCM,data:rCYQ3NDrxH1cCaPtwZLNOPzGuiQ84xmaK5w/17sCnH2mWeBp28XMGIaF8ksxoAZ0kYhztdw58mo=,iv:uwhSdaMBORtUInApdwNfQERBpH9mkijilzv1w8Ev85Q=,tag:mtGyTvsstxDHRIf6RoIFsQ==,type:comment]
+    #ENC[AES256_GCM,data:IIHOXEhp+na28AOr5SALx7W+JcgaZul1Hg==,iv:haanSNhevhDUcNwK23gGh9Bc823KlhMp6zkRB2jppP8=,tag:4i/1jrQcmKrIxLLW4ah4Ig==,type:comment]
+    #ENC[AES256_GCM,data:0jodaeGtmol/UqJlAc5cB7IbkY/qH+k+m4rNTuDkHew80Ps4oYV9DfPaTN4wusmKtELFKs40T/mVf5tadhCs8e7ije0aVMVuWYdGHAo=,iv:WFGJN6U+QX2ML/bR8xBNcJdXPGtYLOLqydb4SkLZ/Ng=,tag:vC+4Y9xAzGLV1L1XEmLFUA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:q4dJiVjYGSyVQkxu6Oh3hVh4/wbXp077AHbL2SsBwLCiu37pSV87x6is6HJhqsuL,iv:GUN6box9692QCdz+QoLmJ7zYqdno4eesA8UP/oo+CEU=,tag:fVMTYaR3Nwlu+/dZP9AFgw==,type:str]
+    #ENC[AES256_GCM,data:qzp7Lt8azluXQ+O4dWDzi/S5VH0gCYWd8rwijdR2qacUplnPJKKEyZ3O2tRt31Cz4KByRnkFWNWwl+MBjBWODZwCNsnc9aA=,iv:Y+UlqNESyeDuV8u4VVF9QPcP/73g+gBOFwKaHnMgreU=,tag:GuWE6pxHXWNo9Z30LPVFPw==,type:comment]
+    #ENC[AES256_GCM,data:cdeKnMpBx8g2PrL0eN990jpp/O8uWrVFjbWDPSX1vPvNnfpMVgb20v9Gf+ZxWfmL+2Xc4Hqj,iv:aeEoDv31HfHbVPWennxgLE3fZ6ZiC/zUPhV3Jd9oH0s=,tag:w5/Em2dLFvctv7xRaaSPOQ==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:n61LsedErw==,iv:nEzbc8nG6zdiZd5yfCxsj0i4Dg4+4N8HxaR3+dqiqBo=,tag:7JWwHNgKHJVrbEkCK03/Cg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:4B8p9RIJbBA8/hrKpalbThy/l+A=,iv:g+b6Ek4eoQoaVGPVPZTPPPnZ/p4QALbudOCRfOKGfYA=,tag:cX9a5plbrk+a5YE5Kzl8fg==,type:str]
+    #ENC[AES256_GCM,data:lA7LcLlbJZlHVdWVuyE=,iv:u+51af206/3oyl3iGIx7nZv51OWvFweUnHF5dOuEl84=,tag:bSbaBh/nUQe/JpU7jXFxdw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:vR81iXCi0kwr1Subeg==,iv:4v5MXp/T0hdcWGzLRsMfxJ5rx5DkkHAa0C/blSbfSuQ=,tag:KLchA+VAENjh1OafGq5knw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:XfhQ4wCgG5AIRMw/Ug==,iv:+botPa6oDfeegC5SoX68Pukfac28KRw4a+G434oI6Uo=,tag:nEdZ0yBwFFd3L3BpQm2mjw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:3LFNHg==,iv:umnsQBD9W/TNWBwpJuMB3t8fvCdPfPHq7xcDsxaV+DU=,tag:fwRMcKalTfzKDz4iRAXiZw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -52,14 +52,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaM3FsN0E2OWpqek05bit4
-            UzMwa0dkV0VTN1NqK2dKRVNucDlFdExFSDBzCnF2cy9tZXRWL2owc0pqZG5mUkw5
-            YmhkUXRYWnMvWVhGRWViczdSNmRCc2sKLS0tIHcrbXZaSVpzbm5XYS9UWFE4a2cz
-            K2k0T0Zza2tGVlk5ZHBjc21hNU1idXcKGeyiZfu9pmHq+kra68GPm8htT4exmXtO
-            SE3IMNdTwo+8d88j037GUfrrud8NI1GWfrNtF0JbcEVqTCfL+gsuDw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEZzY1L3M0S1FBVWdzbVdR
+            ckJSRU1ZMHkwS2J1TU9tOXRoaUZPVjhGWFVRCkhIQy93a01ldmNIWUFCNkMwMVN3
+            dHRkbzZEVTIwOENkRjN0cnplUjZWYjAKLS0tICtpSzgvN3A4aFQ4Ukc1K044WHMw
+            VkFlbkVFMFJBdkVVVXQ3eEcwTDJucXMKXjZw/+OLNS+lwHRZQGMKZpA5gfvPkpCT
+            Z916RRQSHkXJVCeCUAOSDRJtYS+1yVAli8P0eBMf+OyCXEyHgLiAKw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:56:29Z"
-    mac: ENC[AES256_GCM,data:mtuh0HmZBH3CccqarJjsOXtD+F0u1F8fb0ckyunYhnYVgNzEu4aZiOqvXSqkQvNGAIzanGPHlUEySDmV8+q0aJ9GxpDdGSZtAfGKvyWjG49z0KgLFiCrzVTjMWinfPeP5Ab4XBa5OptX0OfgZns96JGDLKEGKiphP6ChKX9t/Vs=,iv:FJLo9n8sbluiXkLLU7EbpZt5DVJ2P0EBoW6MSafjkSg=,tag:ZsT66ThPiqE+pDB9IH9MaA==,type:str]
+    lastmodified: "2025-01-01T19:08:30Z"
+    mac: ENC[AES256_GCM,data:2zLzqfmjRFN7shPeIqZlmmWmC3EdaBXLaCXZEDc8fto9EpGGpFkTFzGByiXWmhBwdcjSH2fX7QcPjyOjO/OMGJum6U7Zuaov/1Nsh038udbK6f/OhEGftSmQ4SC5aDnCHbWauXaryCQuSvvJ+0bL0dbP5Mcow+17WPdPNxGRYWw=,iv:vyfDtpXSWDAVBRRJ+q+gKm5IvPLzZNlGdjZ5Ew4ba3Q=,tag:ipVLf4RdW8BiznHi9BGAUw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
